Fix nav on small screens

--- a/src/components/Nav.css
+++ b/src/components/Nav.css
@@ -1,10 +1,9 @@
-/* TODO: all nav items need to be shifted to the left */
+/* TODO: add classes */
 
 nav {
   position: absolute;
   background-color: var(--background-secondary);
   padding: 1rem 0;
-  /* transform: scale(1.2); */
   overflow: hidden;
   width: 100%;
   margin: 0 auto;
@@ -39,7 +38,7 @@ nav a i {
   transition: 0.3s ease left;
 }
 
-nav span {
+/* nav span {
   position: absolute;
   width: 100px;
   background-color: #202225;
@@ -48,7 +47,7 @@ nav span {
   border-radius: 50px;
   z-index: 1;
   transition: 0.3s ease left;
-}
+} */
 
 nav a:hover b {
   top: 0;
@@ -70,21 +69,12 @@ nav a:nth-child(3):hover ~ span {
   left: 17.5rem;
 }
 
-/* #ytd-url {
-  display: block;
-  position: fixed;
-  right: 0;
-  bottom: 0;
-  padding: 10px 14px;
-  margin: 20px;
-  color: #fff;
-  font-family: Arial;
-  font-size: 14px;
-  text-decoration: none;
-  background-color: #53588b;
-  border-radius: 4px;
-  box-shadow: 0 10px 20px -5px rgba(83, 88, 139, 0.3);
-  z-index: 125;
-} */
+@media only screen and (max-width: 350px) {
+  nav {
+    padding: 0.5rem 0;
+  }
 
-/* jksahdfjshajk */
+  nav a {
+    width: 100px;
+  }
+}
